@@ -1,8 +1,7 @@
 package com.womakerscode.meetup.controller;
 
-import com.womakerscode.meetup.model.dto.MeetupDTO;
-import com.womakerscode.meetup.model.dto.RegistrationMeetupDTO;
-import com.womakerscode.meetup.model.dto.RegistrationOnMeetupDTO;
+import com.womakerscode.meetup.controller.exceptions.BusinessException;
+import com.womakerscode.meetup.model.dto.*;
 import com.womakerscode.meetup.model.entity.Meetup;
 import com.womakerscode.meetup.model.entity.MeetupRegistration;
 import com.womakerscode.meetup.model.entity.Registration;
@@ -26,7 +25,6 @@ import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilde
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.testcontainers.shaded.com.fasterxml.jackson.databind.ObjectMapper;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -39,9 +37,9 @@ import static org.hamcrest.Matchers.hasSize;
 @AutoConfigureMockMvc
 class MeetupRegistrationControllerTest {
 
-    private static String MEETUP_REGISTRATION_API = "/api/meetup/registration/connect/";
-    private static Integer MEETUP_ID = 1;
-    private static Integer REGISTRATION_ID = 101;
+    private static final String MEETUP_REGISTRATION_API = "/api/meetup/registration/connect";
+    private static final Integer MEETUP_ID = 1;
+    private static final Integer REGISTRATION_ID = 101;
 
     @Autowired
     MockMvc mockMvc;
@@ -59,15 +57,12 @@ class MeetupRegistrationControllerTest {
     @DisplayName("Should create a meetupRegistration with success")
     public void createMeetupRegistration() throws Exception{
 
-        Meetup meetup = createNewMeetup();
-        Registration registration = createNewRegistration();
         RegistrationOnMeetupDTO registrationOnMeetupDTO = createNewRegistrationOnMeetupDTO();
-        List<Registration> registrations = Arrays.asList(registration);
+        List<Registration> registrations = List.of(createNewRegistration());
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = objectMapper.writeValueAsString(registrationOnMeetupDTO);
+        String json = new ObjectMapper().writeValueAsString(registrationOnMeetupDTO);
 
-        BDDMockito.given(meetupService.getMeetupById(registrationOnMeetupDTO.getMeetupId())).willReturn(meetup);
+        BDDMockito.given(meetupService.getMeetupById(registrationOnMeetupDTO.getMeetupId())).willReturn(createNewMeetup());
         BDDMockito.given(registrationService.findAllRegistrationsByIds(registrationOnMeetupDTO.getRegistrationsId()))
                 .willReturn(registrations);
 
@@ -91,7 +86,6 @@ class MeetupRegistrationControllerTest {
         Meetup meetup = createNewMeetup();
         Registration registration = createNewRegistration();
         List<MeetupRegistration> meetupRegistrationList = createNewMeetupRegistration();
-        RegistrationMeetupDTO dto = createNewRegistrationMeetupDTO();
 
         BDDMockito.given(meetupService.getMeetupById(MEETUP_ID)).willReturn(meetup);
         BDDMockito.given(registrationService.getRegistrationById(REGISTRATION_ID))
@@ -99,8 +93,7 @@ class MeetupRegistrationControllerTest {
         BDDMockito.given(service.findByMeetupAndRegistration(meetup, registration))
                 .willReturn(meetupRegistrationList);
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = objectMapper.writeValueAsString(dto);
+        String json = new ObjectMapper().writeValueAsString(createNewRegistrationMeetupDTO());
 
         MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders
                 .delete(MEETUP_REGISTRATION_API)
@@ -116,12 +109,10 @@ class MeetupRegistrationControllerTest {
     @DisplayName("Should return message when delete a meetupRegistration and registration not found")
     public void deleteMeetupRegistrationWhenRegistrationNotFound() throws Exception{
 
-        RegistrationMeetupDTO dto = createNewRegistrationMeetupDTO();
+        BDDMockito.given(registrationService.getRegistrationById(REGISTRATION_ID))
+                .willThrow(new BusinessException("Registration not found"));
 
-        BDDMockito.given(registrationService.getRegistrationById(REGISTRATION_ID)).willReturn(Optional.empty());
-
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = objectMapper.writeValueAsString(dto);
+        String json = new ObjectMapper().writeValueAsString(createNewRegistrationMeetupDTO());
 
         MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders
                 .delete(MEETUP_REGISTRATION_API)
@@ -140,8 +131,7 @@ class MeetupRegistrationControllerTest {
 
         RegistrationMeetupDTO dto = RegistrationMeetupDTO.builder().registrationId(REGISTRATION_ID).build();
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = objectMapper.writeValueAsString(dto);
+        String json = new ObjectMapper().writeValueAsString(dto);
 
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .delete(MEETUP_REGISTRATION_API)
@@ -155,13 +145,12 @@ class MeetupRegistrationControllerTest {
     }
 
     @Test
-    @DisplayName("Should return message when meetupId is null")
+    @DisplayName("Should return message when registrationId is null")
     public void meetupRegistrationRegistrationIdNotNull() throws Exception {
 
         RegistrationMeetupDTO dto = RegistrationMeetupDTO.builder().meetupId(MEETUP_ID).build();
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String json = objectMapper.writeValueAsString(dto);
+        String json = new ObjectMapper().writeValueAsString(dto);
 
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
                 .delete(MEETUP_REGISTRATION_API)
@@ -174,6 +163,45 @@ class MeetupRegistrationControllerTest {
                 .andExpect(jsonPath("errors").value("O campo registrationId não pode ser nulo"));
     }
 
+    @Test
+    @DisplayName("Should find meetupRegistration by meetup")
+    public void findByMeetup () throws Exception {
+
+        Meetup meetup = createNewMeetup();
+        List<MeetupRegistration> meetupRegistrations = createNewMeetupRegistration();
+
+        BDDMockito.given(meetupService.getMeetupById(MEETUP_ID)).willReturn(meetup);
+        BDDMockito.given(service.findByMeetup(meetup)).willReturn(meetupRegistrations);
+
+        MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders
+                .get(MEETUP_REGISTRATION_API.concat("/" + MEETUP_ID))
+                .accept(MediaType.APPLICATION_JSON);
+
+        mockMvc.perform(requestBuilder)
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("meetupDTO").value(meetup))
+                .andExpect(jsonPath("registrationsDTO", hasSize(1)))
+                .andExpect(jsonPath("registrationsDTO[0]").value(createNewRegistrationDTO()));
+    }
+
+    private Meetup createNewMeetup(){
+        return Meetup.builder()
+                .id(MEETUP_ID)
+                .name("WoMakersCode Java")
+                .date("01/06/2022")
+                .activated(true)
+                .build();
+    }
+
+    private Registration createNewRegistration(){
+        return Registration.builder()
+                .id(REGISTRATION_ID)
+                .name("Caroline")
+                .dateOfRegistration("01/04/2022")
+                .cpf("012345678900")
+                .build();
+    }
+
     private RegistrationMeetupDTO createNewRegistrationMeetupDTO() {
         return RegistrationMeetupDTO.builder()
                 .meetupId(MEETUP_ID)
@@ -184,22 +212,24 @@ class MeetupRegistrationControllerTest {
     private RegistrationOnMeetupDTO createNewRegistrationOnMeetupDTO(){
         return RegistrationOnMeetupDTO.builder()
                 .meetupId(MEETUP_ID)
-                .registrationsId(Arrays.asList(REGISTRATION_ID))
+                .registrationsId(List.of(REGISTRATION_ID))
                 .build();
     }
 
-    private Meetup createNewMeetup(){
-        return Meetup.builder().id(MEETUP_ID).build();
-    }
-
-    private Registration createNewRegistration(){
-        return Registration.builder().id(REGISTRATION_ID).build();
-    }
-
     private List<MeetupRegistration> createNewMeetupRegistration() {
-         return Arrays.asList(MeetupRegistration.builder()
+         return List.of(MeetupRegistration.builder()
                  .meetup(createNewMeetup())
                  .registration(createNewRegistration())
                  .build());
+    }
+
+
+    private RegistrationDTO createNewRegistrationDTO() {
+        return RegistrationDTO.builder()
+                .id(REGISTRATION_ID)
+                .name("Caroline")
+                .dateOfRegistration("01/04/2022")
+                .cpf("012345678900")
+                .build();
     }
 }
